Fix Start button not centered

--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@
 }
 
 .btn {
-  width: 80px;
+  width: auto;
   padding: 0.5em 1.5em;
   font-size: 1.125rem;
   font-weight: 500;
